update setting
code